# airflow-dag-examples

./: pyproject.toml
dags/aws/: example_sns_operator.py
dags/build_tasks/: main.py
dags/build_tasks/sub/: sw1.py  sw2.py  sw3.py
dags/data_aware_scheduling/: example_dataset.py  example_dataset_2.py  example_dataset_3.py  example_dataset_with_and_condition.py  example_dataset_with_or_condition.py  nyc_taxi_monday_avg.py  nyc_taxi_trips_by_zone_by_day.py  test_postgres_connection.py  utils.py
dags/dynamic_task_mapping/: example_dtm_non_taskflow_api.py
dags/external_task_sensor/: example_external_task_sensor.py
dags/libs/: slack.py
dags/sla/: example_sla_miss_slack_notification.py
dags/task_groups/: example_task_group1.py  example_task_group_nest.py
dags/taskflow_api/: example_taskflow.py
