[project]
name = "airflow-dag-examples"
version = "0.1.0"
description = "Airflow dag examples"
authors = [
    { name = "matsuda", email = "daaamatsun@gmail.com" }
]
dependencies = [
    "apache-airflow-providers-google==17.1.0",
    "apache-airflow-providers-amazon==9.12",
    "apache-airflow==3.0.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "Q", "UP", "AIR"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
